@@ -4,10 +4,12 @@ Core changes:
 - added bilinear and bilinear plus filters
 - added interframe blending support
 - fixed crash when loading a second ELF file
+- now able to show speed in fullscreen mode
 
 Windows version:
 - allows AMD CPUs to take advantage of MMX code
 - added support to select video mode for fullscreen mode
+- added fullscreen triple buffering support
 - fixed problem displaying error messages in fullscreen mode
 - fixed tile viewer to display all tiles in 256 mode
 - fixed Visual Studio project files so that they work on other computers
